# mahjong-vision

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nodemon.json  tsconfig.json
MahjongVision/: settings.gradle.kts
MahjongVision/app/: build.gradle.kts
MahjongVision/app/src/androidTest/java/com/skeep/mahjongvision/: ExampleInstrumentedTest.kt
MahjongVision/app/src/main/: AndroidManifest.xml
MahjongVision/app/src/main/java/com/skeep/mahjongvision/: API.kt  CameraActivity.kt  ConfirmationActivity.kt  GuideActivity.kt  HowToUse.kt  MainActivity.kt  MoreInformation.kt  NoResultActivity.kt  ResultActivity.kt  RetrofitInstance.kt  SurveyActivity.kt  TakePicture.kt  Utils.kt  VolleyMultipartRequest.kt
MahjongVision/app/src/main/res/drawable/: round_background.xml
MahjongVision/app/src/main/res/layout/: activity_camera.xml  activity_confirmation.xml  activity_guide.xml  activity_how_to_use.xml  activity_main.xml  activity_more_information.xml  activity_no_result.xml  activity_result.xml  activity_survey.xml  activity_take_picture.xml
MahjongVision/app/src/main/res/values/: strings.xml  themes.xml
MahjongVision/app/src/main/res/values-night/: themes.xml
MahjongVision/gradle/wrapper/: gradle-wrapper.properties
back/: Dockerfile  package-lock.json  package.json
mahjong-vision-calculater/: index.py  main.py  pyproject.toml  requirements.txt  run.sh
mahjong-vision-calculater/data_calculator/: calculate_han_yaku.py  split_data.py
mahjong-vision-calculater/image_data_converter/: image_convert.py  image_to_data.py  predict.py
src/: index.ts
(+1 files in other folders)
